--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
+/* Add a black background color to the top navigation */
+nav {
+  background-color: #333;
+  height: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Style the links inside the navigation bar */
+nav a {
+  line-height: 50px;
+  color: #f2f2f2;
+  padding-left: 16px;
+  padding-right: 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.link {
+  float: right;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
 }
