Created common styles file and added logos

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,25 +1,1 @@
-/* Add a black background color to the top navigation */
-nav {
-  background-color: #333;
-  height: 50px;
-}
-
-/* Style the links inside the navigation bar */
-nav a {
-  line-height: 50px;
-  color: #f2f2f2;
-  padding-left: 16px;
-  padding-right: 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.link {
-  float: right;
-
-}
-/* Change the color of links on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
+@import "styles/common.css";
