--- a/website/src/app/components/Footer/Footer.css
+++ b/website/src/app/components/Footer/Footer.css
@@ -1,10 +1,12 @@
+@import "../../../styles/common.css";
+
 .footer {
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
     height: 5%;
-    background-color:#333;
+    background-color: var(--dark-purple);
     color: #f2f2f2;
-    margin:auto;
-  }
+    margin: auto;
+}
