--- a/website/src/app/views/home/Home.css
+++ b/website/src/app/views/home/Home.css
@@ -1,34 +1,35 @@
 @import "../../../styles/common.css";
 
 main {
-    display: grid;
-    grid-template-columns: 40% 60%;
-    grid-template-rows: 80vh 80vh;
-    grid-template-areas:
-    "image right"
-    "bottom bottom";
-    overflow: scroll;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
+    overflow: scroll;
 }
 
 img {
-    grid-area: image;
-    width: 500px;
-    height: 500px;
-    justify-self: end;
+    width: 40vw;
+    height: 40vw;
 }
 
 .right {
-    grid-area: right;
-    margin-left: 20%;
-    width: 60%;
+    display: flex;
+    flex-direction: column;
+    height: 70vh;
+    width: 60vw;
     color: var(--dark-purple);
+    justify-content: center;
+    align-items: center;
 }
 
-.right p {
+.right div {
+    width: 50%;
+}
+
+.right div p {
     line-height: 1.7em;
 }
-
 #learn-more {
     width: 150px;
     border-radius: 20px;
@@ -37,24 +38,11 @@ img {
 }
 
 .bottom-panel {
-    grid-area: bottom;
-    height: 100%;
+    height: 70vh;
     color: var(--dark-purple);
     text-align: center;
 }
 
 .bottom-panel p {
     margin-top: 30px;
-}
-
-.logoborder a {
-    text-decoration: none;
-    font-size: 20px;
-
-    margin: 10px;
-    padding-bottom: 10px;
-}
-
-.logoborder a i {
-    color: var(--dark-purple);
 }
