Resolve "[FEAT] Create and style Footer"

--- a/website/src/styles/common.css
+++ b/website/src/styles/common.css
@@ -4,9 +4,10 @@ Commit the Change website environment styles.
 
 **/
 
+/* Montserrat Font */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 /* Secondary and Accent Colors */
-
 :root {
     --dark-purple: #6331D8;
     --light-purple: #BEA9EF;
