--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,1 +1,11 @@
 @import "styles/common.css";
+
+.page-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  
+.content-wrap {
+    flex: 1;
+}
