--- a/website/src/app/components/Footer/Footer.css
+++ b/website/src/app/components/Footer/Footer.css
@@ -1,12 +1,117 @@
 @import "../../../styles/common.css";
 
 .footer {
-    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 5%;
     background-color: var(--dark-purple);
+    color: white;
+    margin-top: 50px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.columns {
+    display: flex;
+    flex-direction: row;
+    font-size: 15px;
+    padding: 50px 40px;
+}
+
+.left-column {
+    flex: 1;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 20px;
+    flex-direction: column;
+    padding-top: 25px;
+    box-sizing: border-box;
+}
+
+.inner-left {
+    padding-left: 20px;
+}
+
+.middle-column {
+    flex: 2;
+    text-align: center;
     color: #f2f2f2;
-    margin: auto;
+    line-height: 15px;
+}
+
+.middle-column img{
+    width: 100px;
+    height: auto;
+    padding-bottom: 10px;
+}
+
+.middle-column a{
+    margin: 0 8px;
+    color: #f2f2f2;
+}
+
+.middle-column a:hover {
+    color: var(--light-purple);
+}
+
+.right-column {
+    flex: 1;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 25px;
+}
+
+.right-column a {
+    text-decoration: none; 
+    color: #f2f2f2;
+}
+
+.right-column a:hover {
+    color: var(--light-purple);
+}
+
+.inner-right {
+    padding-left: 120px;
+}
+
+@media screen and (max-width: 800px) {
+    .columns {
+      flex-direction: column;
+      margin: 20px 20px;
+      align-items: center;
+      justify-content: space-between;
+      
+    }
+
+    .left-column{
+        order: 2;
+        text-align: center;
+        margin: 25px;
+    }
+
+    .inner-left {
+        padding-left: 0;
+    }
+
+    .middle-column{
+        order: 1;
+    }
+
+    .middle-column img{
+        width: 100px;
+        height: auto;
+    }
+
+    .right-column{
+        order: 3;
+        text-align: center;
+    }
+
+    .inner-right {
+        padding-left: 0;
+    }
+
 }
