--- a/website/src/app/views/home/Home.css
+++ b/website/src/app/views/home/Home.css
@@ -7,23 +7,22 @@
 .top-panel {
     display: flex;
     flex-direction: row;
+    margin-top: 8em;
+    margin-bottom: 10em;
 }
 
 .top-left {
     flex: 1;
 }
 
-.top-left .image {
-    display: block;
-    max-height: 500px;
-    max-width: 500px;
-    height: 70%;
-    width: auto;
-    margin: auto;
+.inner-top-left {
+    text-align: right;
+    padding-right: 40px;
 }
 
-.image img {
-    max-width: 100%;
+.inner-top-left img {
+    height: 400px;
+    width: auto;
 }
 
 .top-right {
@@ -32,11 +31,15 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    margin-left: 20px !important;
 }
 
 .top-right .text {
-    margin: 20px;
+    width: 500px;
+}
+
+.text h1 {
+    font-weight: normal;
 }
 
 .text p {
@@ -44,45 +47,229 @@
 }
 
 #learn-more {
-    width: 150px;
-    border-radius: 20px;
     background-color: var(--dark-pink);
+    margin-top: 10px;
+    width: 200px;
+    height: 50px;
+    border-radius: 30px;
+    font-size: 18px;
+}
+
+#learn-more a {
+    text-decoration: none;
+    color: white;
+}
+
+.middle-panel {
+    background-image: url("../../../images/temp-home.svg");
+    width: 100%;
+    height: 750px;
+    padding-top: 50px;
+    color: white;
+}
+
+.middle-panel h2 {
+    color: var(--dark-pink);
+    text-align: center;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 20px;
+}
+
+.middle-panel .join-team{
+    text-align: center;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 44px;
+}
+
+.middle-panel .interested{
+    text-align: center;
+    font-size: 22px;
+    line-height: 30px;
+    width: 600px;
+    margin: auto;
+}
+
+.buttons {
+    margin-top: 200px;
+    text-align: center;
+}
+
+.btn {
+    width: 220px;
+    height: 60px;
+    border-radius: 30px;
+    margin: 30px;
+    font-size: 20px;
+}
+
+#projects-button {
+    background-color: white;
+    border: solid;
+    border-width: 1px;
+    border-color: var(--dark-pink);
     margin-top: 5px;
 }
 
-.bottom-panel {
-    width: 100%;
-    height: 50vh;
-    color: var(--dark-purple);
+#projects-button a {
+    text-decoration: none;
+    color: var(--dark-pink);
 }
 
-.bottom-panel h2, .bottom-panel p {
+#apply-button {
+    background-color: var(--dark-pink);
+    margin-top: 5px;
+    text-decoration: none;
+}
+
+#apply-button a {
+    text-decoration: none;
+    color: white;
+}
+
+.bottom-panel {
+    height: 500px;
+    width: 100%;
+    background: white;
+    padding-top: 100px;
+}
+
+.bottom-content {
+    margin-left: auto;
+    margin-right: auto;
+    padding: 70px;
+    border-style: solid;
+    border-color: var(--dark-purple);
+    border-radius: 15px;
+    width: 500px;
+    background-color: var(--dark-purple);
+}
+
+.bottom-panel h2 {
     text-align: center;
-    margin-top: 30px;
+    color: white;
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 29px;
+}
+
+.bottom-panel p {
+    text-align: center;
+    color: white;
+    font-size: 18px;
+}
+
+.social-media {
+    margin-top: 50px;
+    flex: 2;
+    text-align: center;
+    color: #f2f2f2;
+}
+
+.social-media a{
+    margin: 15px;
+    color: white;
+    height: 200px;
+}
+
+.middle-column a:hover {
+    color: var(--light-purple);
 }
 
 @media screen and (max-width: 800px) {
     .top-panel {
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .top-right {
+        margin-left: 0px !important;
+        width: 85%;
     }
 
     .top-right .text {
         text-align: center;
+        width: 100%;
     }
 
-    .top-left .image {
-        max-height: 400px;
-        max-width: 400px;
-        height: 70%;
-        width: auto;
+    .top-right h1 {
+        font-size: 18px;
     }
 
-    .image img {
-        max-width: 100%;
-        max-height: 100%;
+    .top-right p {
+        font-size: 12px;
     }
 
-    .top-right .text {
-        margin-top: 0;
+    .top-left img {
+        display: none;
+    }
+
+    .middle-panel {
+        height: 500px;
+    }
+
+    #learn-more {
+        width: 100px;
+        border-radius: 20px;
+        background-color: var(--dark-pink);
+        margin-top: 5px;
+        font-size: 12px;
+    }
+
+    .middle-panel h2 {
+        font-size: 16px;
+    }
+
+    .middle-panel .join-team {
+        font-size: 20px;
+        line-height: 18px;
+    }
+
+    .middle-panel .interested {
+        width: 90%;
+        font-size: 12px;
+        line-height: 18px;
+    }
+
+    .buttons .btn {
+        width: 140px;
+        height: 40px;
+        font-size: 14px;
+        margin: 0px 5px;
+        padding: 0px;
+    }
+
+    .bottom-panel {
+        width: 100%;
+        height: 275px;
+    }
+
+    .bottom-panel .bottom-content {
+        padding: 10px;
+        width: 85%;
+    }
+
+    .bottom-content h2 {
+        font-size: 20px;
+    }
+
+    .bottom-content p {
+        font-size: 12px;
+        line-height: 18px;
+    }
+
+    .social-media {
+        margin: 20px;
+    }
+
+    .bottom-content .social-media .fa{
+        font-size: 1.5em !important;
+    }
+
+    .bottom-content .social-media a{
+        margin: 10px;
     }
 }
