--- a/website/src/app/components/Footer/Footer.css
+++ b/website/src/app/components/Footer/Footer.css
@@ -6,7 +6,7 @@
     width: 100%;
     background-color: var(--dark-purple);
     color: white;
-    margin-top: 50px;
+    /* margin-top: 50px; */
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -80,16 +80,16 @@
 @media screen and (max-width: 800px) {
     .columns {
       flex-direction: column;
-      margin: 20px 20px;
-      align-items: center;
-      justify-content: space-between;
-      
+      margin-top: 20px;
+      padding: 0;
+      width: 100%;
     }
 
     .left-column{
         order: 2;
         text-align: center;
-        margin: 25px;
+        margin-top: 20px;
+        margin-bottom: 10px;
     }
 
     .inner-left {
@@ -98,7 +98,18 @@
 
     .middle-column{
         order: 1;
+        margin-top: 40px;
+        line-height: 30px;
     }
+
+    .middle-column a {
+        line-height: 30px;
+        margin: 0 5px;
+    }
+
+    /* .fa-lg {
+        line-height: 1em;
+    } */
 
     .middle-column img{
         width: 100px;
@@ -108,6 +119,7 @@
     .right-column{
         order: 3;
         text-align: center;
+        margin-bottom: 40px;
     }
 
     .inner-right {
