--- a/website/src/app/components/ProfileCard/ProfileCard.css
+++ b/website/src/app/components/ProfileCard/ProfileCard.css
@@ -1,42 +1,53 @@
-.card{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 300px;
-    text-align: center;
-    color: black;
-  }
-  
-  .title {
-    color: grey;
-    font-size: 18px;
-  }
-  
-  button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 8px;
-    color: white;
-    background-color: #000;
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
-    font-size: 18px;
-  }
-  
-  .logoborder a {
-    text-decoration: none;
-    font-size: 20px;
-    color: black;
-    margin: 10px;
-    padding-bottom: 10px;
-  }
-  
-  button:hover, a:hover {
-    opacity: 0.7;
-  }
+.card {
+  max-width: 2;
+  display: grid;
+  grid-template-rows: 240px 60px;
+  grid-template-columns: 190px 50px;
+  margin: auto;
+}
 
-  .logoborder{
-    padding-bottom: 20px
-  }
+img {
+  width: 100%;
+  height: 100%;
+  grid-row: 1/2;
+  grid-column: 1/3;
+  margin: auto;
+}
 
-  @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
+.info {
+  width: 100%;
+  height: 100%;
+  grid-row: 2/3;
+  grid-column: 1/2;
+}
+
+h3 {
+  font-size: 18px;
+  margin: 10px 0px 0px 5px;
+}
+
+p {
+  font-size: 14px;
+  margin: 2px 5px;
+}
+
+.logoborder {
+  grid-row: 2/3;
+  grid-column: 2/3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logoborder img {
+  width: 30px;
+  height: 30px;
+  margin: auto;
+}
+
+
+button:hover, a:hover {
+  opacity: 0.7;
+}
+
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
