Remove button outline and fix eslint errors

--- a/website/src/styles/common.css
+++ b/website/src/styles/common.css
@@ -16,3 +16,7 @@ Commit the Change website environment styles.
     --dark-pink: #ED315D;
     --light-pink: #F58EA6;
 }
+
+button {
+    border: none;
+}
