--- a/website/src/app/views/about/About.css
+++ b/website/src/app/views/about/About.css
@@ -167,6 +167,14 @@ h2:hover>.off {
     flex-direction: row;
     justify-content: space-evenly;
     margin: 30px 0;
+    flex-wrap: wrap; 
+}
+
+.person {
+    width: 25%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 @media screen and (max-width: 1200px) {
