--- a/website/src/app/components/ProjectCard/ProjectCard.css
+++ b/website/src/app/components/ProjectCard/ProjectCard.css
@@ -1,35 +1,34 @@
+
 .project-card{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 800px;
-    margin: 50px 50px;
+  width: 25%;
+}
+.project-name{
+  margin-top: 0;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 23px;
+  color: #000000;
+}
+.description{
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19px;
+  color: #000000;
+  margin-bottom:0;
+}
+.view-project{
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 23px;
+  color: #000000;
 }
 
-.top {
-    padding-top: 10px;
+.card-bottom{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-.project-card img {
-    width: 80px;
-    height: 80px;
-    margin-left: 20px;
-    vertical-align: middle;
-}
-.org-name {
-    display: inline;
-    color: grey;
-    margin-left: 10px;
-    vertical-align: middle;
-}
-
-.bottom {
-    padding-bottom: 30px;
-}
-.description {
-    padding: 0px 30px;
-}
-
-.bottom a {
-    margin: 0px 0px 30px 30px;
-    text-decoration: none;
-}
-
-  @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
