--- a/website/src/app/components/ProfileCard/ProfileCard.css
+++ b/website/src/app/components/ProfileCard/ProfileCard.css
@@ -6,7 +6,7 @@
   margin: auto;
 }
 
-img {
+.card img {
   width: 100%;
   height: 100%;
   grid-row: 1/2;
@@ -21,12 +21,12 @@ img {
   grid-column: 1/2;
 }
 
-h3 {
+.card h3 {
   font-size: 18px;
   margin: 10px 0px 0px 5px;
 }
 
-p {
+.card p {
   font-size: 14px;
   margin: 2px 5px;
 }
@@ -46,7 +46,7 @@ p {
 }
 
 
-button:hover, a:hover {
+.card button:hover, a:hover {
   opacity: 0.7;
 }
 
