--- a/website/src/app/views/home/Home.css
+++ b/website/src/app/views/home/Home.css
@@ -17,12 +17,18 @@
 
 .inner-top-left {
     text-align: right;
-    padding-right: 40px;
+    padding-right: 5%;
+    margin-top: 50px;
+    margin-bottom: auto;
+    height: 100%;
+    vertical-align: middle;
 }
 
 .inner-top-left img {
-    height: 400px;
-    width: auto;
+    height: 70%;
+    min-height: auto;
+    width: 70%;
+    min-width: 300px;
 }
 
 .top-right {
@@ -35,14 +41,17 @@
 }
 
 .top-right .text {
-    width: 500px;
+    width: 70%;
+    overflow-y: visible;
 }
 
 .text h1 {
-    font-weight: normal;
+    font-weight: bold;
+    font-size: 48px;
 }
 
 .text p {
+    color: black;
     line-height: 1.7em;
 }
 
@@ -61,7 +70,7 @@
 }
 
 .middle-panel {
-    background-image: url("../../../images/temp-home.svg");
+    background-image: url("../../../images/home/temp-home.svg");
     width: 100%;
     height: 750px;
     padding-top: 50px;
@@ -93,7 +102,7 @@
 }
 
 .buttons {
-    margin-top: 200px;
+    margin-top: 75px;
     text-align: center;
 }
 
@@ -179,6 +188,24 @@
 }
 
 @media screen and (max-width: 800px) {
+    .text h1 {
+        font-size: 36px;
+    }
+
+    .text p {
+        font-size: 14px;
+    }
+
+    .top-right .text {
+        width: 90%;
+    }
+
+    .inner-top-left {
+        padding-left: 15px;
+    }
+}
+
+@media screen and (max-width: 600px) {
     .top-panel {
         flex-direction: column;
         align-items: center;
@@ -196,11 +223,11 @@
     }
 
     .top-right h1 {
-        font-size: 18px;
+        font-size: 28px;
     }
 
     .top-right p {
-        font-size: 12px;
+        font-size: 16px;
     }
 
     .top-left img {
@@ -212,26 +239,30 @@
     }
 
     #learn-more {
-        width: 100px;
+        width: 120px;
         border-radius: 20px;
         background-color: var(--dark-pink);
         margin-top: 5px;
-        font-size: 12px;
+        font-size: 14px;
     }
 
     .middle-panel h2 {
-        font-size: 16px;
+        font-size: 18px;
     }
 
     .middle-panel .join-team {
-        font-size: 20px;
+        font-size: 24px;
         line-height: 18px;
     }
 
     .middle-panel .interested {
         width: 90%;
-        font-size: 12px;
+        font-size: 16px;
         line-height: 18px;
+    }
+
+    .buttons {
+        margin-top: 0;
     }
 
     .buttons .btn {
@@ -257,7 +288,7 @@
     }
 
     .bottom-content p {
-        font-size: 12px;
+        font-size: 16px;
         line-height: 18px;
     }
 
