--- a/website/src/app/views/our-work/OurWork.css
+++ b/website/src/app/views/our-work/OurWork.css
@@ -3,74 +3,118 @@ html{
     scroll-behavior: smooth;
 }
 
+.title-header{
+    font-style: normal;
+    font-weight: 900;
+    font-size: 42px;
+    color: var(--dark-purple);
+}
+.read-more-button{
+    color: white;
+    background:  #ED315D;
+    border-radius: 20px;
+    width: 150px;
+    height: 40px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+    font-weight: 600;
+    /* identical to box height */
+    text-align: center;
+    text-justify: auto;
+    line-height: 40px;
+    text-decoration: none;
+}
+
 .top-our-work{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
-    height: 100vh;
+    height: 90.75vh;
 }
 
+.title-description{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 25px;
+}
 
 .title-div{
     display:flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-basis: 35%;
     min-width: auto;
-    
 }
 
-.past-projects{
+@media screen and (max-width:768px){
+    .title-div{
+      flex-basis: 70%;
+    }
+  }
+  @media screen and (max-width:846px){
+    .our-work-img{
+        height: 40%;
+    }
+  }
+.upcoming-projects{
     font-style: normal;
-    font-weight: 500;
-    font-size: 40px;
-    line-height: 47px;
-    color: #000000;
-    display: flex;
-    justify-content: center;
-    padding: 5%;
-    
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 44px;
+    text-align: center;
+    color: #ED315D;
 }
 
-#bottom-our-work{
+#middle-our-work{
     height:100vh;
-    background-color: var(--light-purple);
     display: flex;
-    
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .projects{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    flex-grow: 0.5;
-    flex-wrap:wrap ;  
-    
-}
-
-.read-more-button{
-    width: 144px;
-    height: 40px;
-    left: 240px;
-    top: 512px;
-    background: var(--light-purple);
-    border-radius: 15px;
-    width: 103px;
-    height: 22px;
-    left: 260px;
-    top: 521px;
-    text-align: center;
-    text-decoration:none;
-
-    
-
-}
-
-.bottom{
-    display: flex;
-    flex-direction: column;
     justify-content: center;
-   
 }
+
+.scroll-button-element{
+    align-self: center;
+}
+
+
+@media screen and (max-width:768px){
+    .projects{
+        display:flex;
+        flex-direction: column;
+    }
+    #middle-our-work{
+        height: auto;
+    }
+  }
+
+#bottom-our-work{
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap-reverse;
+}
+
+.bottom-card{
+    width: 40%;
+}
+
+@media screen and (max-width:768px){
+    .bottom-card{
+        width: 75%;
+    }
+    #bottom-our-work{
+        justify-content: center;
+        align-items: center;
+    }
+  }
+
