--- a/website/src/app/views/contact-us/ContactUs.css
+++ b/website/src/app/views/contact-us/ContactUs.css
@@ -14,39 +14,121 @@
   justify-content: space-evenly;
 }
 
+.contact-us-title-text{
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 35px;
+  line-height: 51px;  
+  color: #6331D8;
+}
+
+.apply-now-button{
+    color: white;
+    background:  #ED315D;
+    border-radius: 20px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+    font-weight: 600;
+    /* identical to box height */
+    text-align: center;
+    text-justify: auto;
+    line-height: 40px;
+    text-decoration: none;
+    padding: 10px;
+}
+
+
+.contact-us-students{
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+/* identical to box height */
+  color: #F58EA6;
+
+}
+
 .contact-us-info{
   flex-basis: 30%;
 }
 
 .contact-us-img{
-  flex-basis: 15%;
+  width: 40%;
 }
 
 @media screen and (max-width:768px){
   .contact-us-info{
     flex-basis: 60%;
   }
+  .contact-us-img{
+    width: 80%;
+  }
 }
 
 #contact-us-middle-third{
   height: 100vh;
-  background-color: var(--light-purple);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
 }
 
+.heart-logo{
+  width: 30%;
+}
+
+@media screen and (max-width:768px){
+  .heart-logo{
+    width: 0%;
+  }
+}
+
 .contact-us-middle-items{
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
 .middle-third-info{
   flex-basis: 40%;
+  margin: 15%;
+}
+
+.middle-contact-header{
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+  /* identical to box height */
+  color: #F58EA6;
+}
+
+.middle-contact-title{
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 44px;
+  /* identical to box height */
+  color: #6331D8;
+}
+
+.get-in-touch-button{
+  color: white;
+    background:  #ED315D;
+    border-radius: 20px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+    font-weight: 600;
+    /* identical to box height */
+    text-align: center;
+    text-justify: auto;
+    line-height: 40px;
+    text-decoration: none;
+    padding: 10px;
 }
 
 @media screen and (max-width:768px){
