--- a/website/src/app/views/home/Home.css
+++ b/website/src/app/views/home/Home.css
@@ -7,8 +7,7 @@
 .top-panel {
     display: flex;
     flex-direction: row;
-    margin-top: 8em;
-    margin-bottom: 10em;
+    height: calc(100vh - 82px);
 }
 
 .top-left {
@@ -72,7 +71,7 @@
 .middle-panel {
     background-image: url("../../../images/home/temp-home.svg");
     width: 100%;
-    height: 750px;
+    height: 100vh;
     padding-top: 50px;
     color: white;
 }
@@ -139,7 +138,7 @@
 }
 
 .bottom-panel {
-    height: 500px;
+    height: 100vh;
     width: 100%;
     background: white;
     padding-top: 100px;
