--- a/website/src/app/views/about/About.css
+++ b/website/src/app/views/about/About.css
@@ -1,9 +1,8 @@
 @import "../../../styles/common.css";
 
-main {
-    color: var(--dark-purple);
-}
+
 .top-panel {
+    height: 50vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -18,7 +17,12 @@ main {
     align-items: center;
 }
 
-.panel-left h1, .panel-left p {
+.panel-left h1 {
+    color: var(--dark-purple);
+    width: 70%;
+}
+
+.panel-left p {
     width: 70%;
 }
 
@@ -73,7 +77,7 @@ h2:hover>.off {
 .mission-text h1 {
     padding: 0 10%;
     font-size: 45px;
-    margin: auto
+    margin: auto;
 }
 
 .mission-text p {
@@ -100,6 +104,10 @@ h2:hover>.off {
 .our-values-panel {
     text-align: center;
     margin: 100px 0;
+}
+
+.our-values-panel h1 {
+    color: var(--dark-purple);
 }
 
 .our-values-panel>p {
@@ -147,6 +155,7 @@ h2:hover>.off {
 .our-team-panel>h1 {
     text-align: center;
     margin-bottom: 100px;
+    color: var(--dark-purple);
 }
 
 .team-photos {
@@ -203,8 +212,31 @@ h2:hover>.off {
         margin-bottom: 50px;
     }
 
+    .panel-right img {
+        height: 20vh;
+        flex: 1 1 50%;
+    }
     .our-mission-panel {
         margin: 0px 0;
+    }
+
+    .mission-text {
+        text-align: center;
+        width: 100%;
+    }
+
+    .mission-text h1 {
+        text-align: center;
+        margin-bottom: 50px;
+    }
+
+    .mission-text p {
+        padding: 0 20%;
+        margin-bottom: 20px;
+    }
+
+    .ctc-logo {
+        display: none;
     }
 
     .value-row-1, .value-row-2 {
@@ -215,6 +247,10 @@ h2:hover>.off {
     .value {
         flex: 0;
         margin: 30px auto;
+    }
+
+    .value h1, .value p {
+        margin: 30px;
     }
     .team-photos {
         flex-direction: column;
