--- a/website/src/styles/common.css
+++ b/website/src/styles/common.css
@@ -18,6 +18,7 @@ Commit the Change website environment styles.
     --yellow: #FC9803;
     --dark-pink: #ED315D;
     --light-pink: #F58EA6;
+    --lighter-pink: #FED4DD;
 }
 
 button {
