--- a/website/src/app/components/Footer/Footer.css
+++ b/website/src/app/components/Footer/Footer.css
@@ -45,8 +45,12 @@
     padding-bottom: 10px;
 }
 
+.middle-column h2{
+    margin-bottom: 30px;
+}
+
 .middle-column a{
-    margin: 0 8px;
+    margin: 0px 10px;
     color: #f2f2f2;
 }
 
@@ -80,7 +84,6 @@
 @media screen and (max-width: 800px) {
     .columns {
       flex-direction: column;
-      margin-top: 20px;
       padding: 0;
       width: 100%;
     }
@@ -104,7 +107,7 @@
 
     .middle-column a {
         line-height: 30px;
-        margin: 0 5px;
+        margin: 0 8px;
     }
 
     /* .fa-lg {
