initial page load animation

--- a/website/src/app/views/home/Home.css
+++ b/website/src/app/views/home/Home.css
@@ -9,7 +9,7 @@
 .top-panel {
     display: flex;
     flex-direction: row;
-    height: calc(100vh - 82px);
+    height: calc(100vh - 82px) !important;
 }
 
 .top-left {
