--- a/website/src/styles/common.css
+++ b/website/src/styles/common.css
@@ -5,27 +5,115 @@ Commit the Change website environment styles.
 **/
 
 /* Montserrat Font */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
 /* Source Code Pro for timeline */
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap");
 
 /* Secondary and Accent Colors */
 :root {
-    --dark-purple: #6331D8;
-    --light-purple: #BEA9EF;
-    --orange: #FC5D03;
-    --yellow: #FC9803;
-    --dark-pink: #ED315D;
-    --light-pink: #F58EA6;
-    --lighter-pink: #FED4DD;
+  --dark-purple: #6331d8;
+  --light-purple: #bea9ef;
+  --orange: #fc5d03;
+  --yellow: #fc9803;
+  --dark-pink: #ed315d;
+  --light-pink: #f58ea6;
+  --lighter-pink: #fed4dd;
 }
 
-button {
-    border: none;
+.top-panel {
+  height: calc(100vh - 82px);
+  display: flex;
+  flex-direction: row;
 }
 
-/* 
-    Removed button borders globally due to a strange
-    bug that gave all buttons a black outline
-*/
+.top-panel-text {
+  padding-right: 2%;
+  margin-top: 20vh;
+  flex: 1;
+}
+
+.inside-top-panel-text {
+  padding-left: 10%;
+  max-width: 700px;
+  float: right;
+}
+
+.top-panel-pic {
+  flex: 1;
+  margin: auto 0;
+}
+
+.top-panel-title {
+  font-size: 42px;
+  font-weight: bold;
+  line-height: 51px;
+  color: var(--dark-purple);
+  text-shadow: 1px 0 var(--dark-purple);
+}
+
+.top-panel-description {
+  font-size: 16px;
+  line-height: 25px;
+  margin-bottom: 30px;
+}
+
+.common-pink-button {
+  background-color: var(--dark-pink);
+  border-radius: 30px;
+  font-size: 18px;
+  color: white;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+  font-weight: 600;
+  line-height: 40px;
+  text-decoration: none;
+  padding: 10px 30px;
+}
+
+@media screen and (max-width: 800px) {
+  .top-panel {
+    height: calc(100vh - 102px);
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .top-panel-text {
+    text-align: center;
+    padding: 0;
+    margin-left: 0;
+    width: 96%;
+    order: 1;
+    margin-bottom: 0;
+    margin-top: 8vh;
+  }
+
+  .inside-top-panel-text {
+    padding-left: 0;
+  }
+
+  .top-panel-pic {
+    order: 2;
+    width: 100%;
+    margin-top: 25px;
+    padding: 0;
+    margin-bottom: 35%;
+    text-align: center;
+  }
+
+  .top-panel-title {
+    font-size: 36px;
+    line-height: 36px;
+  }
+
+  .top-panel-description {
+    font-size: 14px;
+    line-height: 22px;
+    margin-bottom: 15px;
+    padding: 0 20px;
+  }
+
+  .common-pink-button {
+    font-size: 14px;
+  }
+}
