--- a/website/src/app/views/contact-us/ContactUs.css
+++ b/website/src/app/views/contact-us/ContactUs.css
@@ -1,90 +1,27 @@
-.contact-us-upper-third-items{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-}
-
-.contact-us-upper-third{
-  height: 90.8vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-}
-
-.contact-us-title-text{
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: 900;
-  font-size: 35px;
-  line-height: 51px;  
-  color: #6331D8;
-}
-
-.apply-now-button{
-    color: white;
-    background:  #ED315D;
-    border-radius: 20px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-    font-weight: 600;
-    /* identical to box height */
-    text-align: center;
-    text-justify: auto;
-    line-height: 40px;
-    text-decoration: none;
-    padding: 10px;
-}
-
-
-.contact-us-students{
-  font-family: Montserrat;
+.contact-us-students {
   font-style: normal;
   font-weight: 600;
   font-size: 18px;
-  line-height: 22px;
-/* identical to box height */
-  color: #F58EA6;
-
+  line-height: 20px;
+  color: var(--light-pink);
 }
 
-.contact-us-info{
-  flex-basis: 30%;
+.contact-us-top-panel-img {
+  width: 80%;
+  max-height: 500px;
 }
 
-.contact-us-img{
-  width: 40%;
-}
-
-@media screen and (max-width:768px){
-  .contact-us-info{
-    flex-basis: 60%;
-  }
-  .contact-us-img{
-    width: 80%;
-  }
-}
-
-#contact-us-middle-third{
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-}
-
-.heart-logo{
+.heart-logo {
   width: 30%;
 }
 
-@media screen and (max-width:768px){
-  .heart-logo{
+@media screen and (max-width: 768px) {
+  .heart-logo {
     width: 0%;
   }
 }
 
-.contact-us-middle-items{
+.contact-us-middle-items {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -92,52 +29,36 @@
   flex-wrap: wrap;
 }
 
-.middle-third-info{
+.middle-third-info {
   flex-basis: 40%;
   margin: 15%;
 }
 
-.middle-contact-header{
+.middle-contact-header {
   font-family: Montserrat;
   font-style: normal;
   font-weight: 600;
   font-size: 18px;
   line-height: 22px;
-  /* identical to box height */
-  color: #F58EA6;
+  color: #f58ea6;
 }
 
-.middle-contact-title{
+.middle-contact-title {
   font-family: Montserrat;
   font-style: normal;
   font-weight: bold;
   font-size: 36px;
   line-height: 44px;
-  /* identical to box height */
-  color: #6331D8;
+  color: #6331d8;
 }
 
-.get-in-touch-button{
-  color: white;
-    background:  #ED315D;
-    border-radius: 20px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-    font-weight: 600;
-    /* identical to box height */
-    text-align: center;
-    text-justify: auto;
-    line-height: 40px;
-    text-decoration: none;
-    padding: 10px;
-}
-
-@media screen and (max-width:768px){
-  .middle-third-info{
+@media screen and (max-width: 768px) {
+  .middle-third-info {
     flex-basis: 70%;
   }
 }
 
-#contact-us-bottom-third{
+#contact-us-bottom-third {
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -145,7 +66,7 @@
   justify-content: space-evenly;
 }
 
-.contact-us-bottom-third-items{
+.contact-us-bottom-third-items {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -153,12 +74,26 @@
   flex-wrap: wrap;
 }
 
-.bottom-third-info{
+.bottom-third-info {
   flex-basis: 30%;
 }
 
-@media screen and (max-width:768px){
-  .bottom-third-info{
+@media screen and (max-width: 768px) {
+  .bottom-third-info {
     flex-basis: 60%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .contact-us-top-panel-img {
+    width: 65%;
+  }
+
+  .contact-mobile {
+    margin-top: 10%;
+  }
+
+  .contact-us-img {
+    display: none;
   }
 }
