--- a/website/src/app/views/home/Home.css
+++ b/website/src/app/views/home/Home.css
@@ -6,68 +6,9 @@
 
 /* Top Panel */
 
-.top-panel {
-    display: flex;
-    flex-direction: row;
-    height: calc(100vh - 82px) !important;
-}
-
-.top-left {
-    flex: 1;
-}
-
-.inner-top-left {
-    text-align: right;
-    padding-right: 5%;
-    margin-top: 50px;
-    margin-bottom: auto;
-    height: 100%;
-    vertical-align: middle;
-}
-
-.inner-top-left img {
-    height: 70%;
-    min-height: auto;
-    width: 70%;
-    min-width: 300px;
-}
-
-.top-right {
-    flex: 1;
-    color: var(--dark-purple);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-left: 20px !important;
-}
-
-.top-right .text {
-    width: 70%;
-    overflow-y: visible;
-}
-
-.text h1 {
-    font-weight: bold;
-    font-size: 48px;
-}
-
-.text p {
-    color: black;
-    line-height: 1.7em;
-}
-
-#learn-more {
-    background-color: var(--dark-pink);
-    margin-top: 10px;
-    width: 200px;
-    height: 50px;
-    border-radius: 30px;
-    font-size: 18px;
-}
-
-#learn-more a {
-    text-decoration: none;
-    color: white;
+.home-top-panel-img {
+    width: 80%;
+    max-height: 500px;
 }
 
 /* Bottom Panel */
@@ -109,34 +50,30 @@
     text-align: center;
 }
 
-.btn {
-    width: 220px;
-    height: 60px;
+.timeline-btn {
+    display: inline-block;
     border-radius: 30px;
-    margin: 30px;
+    margin: 0 30px;
     font-size: 20px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+    width: 180px;
+    height: 50px;
+    line-height: 50px;
 }
 
-#projects-button {
+.projects-btn {
     background-color: white;
     border: solid;
     border-width: 1px;
     border-color: var(--dark-pink);
     margin-top: 5px;
-}
-
-#projects-button a {
     text-decoration: none;
     color: var(--dark-pink);
 }
 
-#apply-button {
+.apply-btn {
     background-color: var(--dark-pink);
     margin-top: 5px;
-    text-decoration: none;
-}
-
-#apply-button a {
     text-decoration: none;
     color: white;
 }
@@ -187,73 +124,16 @@
 }
 
 @media screen and (max-width: 800px) {
-    .text{
-        text-align: center;
-    }
-
-    .text h1 {
-        font-size: 36px;
-    }
-
-    .text p {
-        font-size: 14px;
-        padding: 0 40px;
-    }
-
-    .top-right .text {
-        width: 90%;
-    }
-
-    .inner-top-left {
-        padding-left: 15px;
-    }
-
-    .top-left {
-        display: none;
-    }
-
     .social-media-link{
         margin: 0 30px;
+    }
+
+    .home-top-panel-img {
+        width: 65%;
     }
 }
 
 @media screen and (max-width: 600px) {
-    .top-panel {
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .top-right {
-        margin-left: 0px !important;
-        width: 85%;
-    }
-
-    .top-right .text {
-        text-align: center;
-        width: 100%;
-    }
-
-    .top-right h1 {
-        font-size: 28px;
-    }
-
-    .top-right p {
-        font-size: 16px;
-    }
-
-    .text-p {
-        padding: 0;
-    }
-
-    #learn-more {
-        width: 120px;
-        border-radius: 20px;
-        background-color: var(--dark-pink);
-        margin-top: 5px;
-        font-size: 14px;
-    }
-
     .bottom-panel h2 {
         font-size: 18px;
     }
@@ -279,6 +159,16 @@
         font-size: 14px;
         margin: 0px 5px;
         padding: 0px;
+    }
+
+    .timeline-btn {
+        display: inline-block;
+        margin: 0 15px;
+        font-size: 14px;
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+        width: 125px;
+        height: 40px;
+        line-height: 40px;
     }
 
     .social-media-section {
