--- a/website/src/app/views/our-work/OurWork.css
+++ b/website/src/app/views/our-work/OurWork.css
@@ -1,120 +1,75 @@
+@import "../../../styles/common.css";
 
-html{
-    scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
 
-.title-header{
-    font-style: normal;
-    font-weight: 900;
-    font-size: 42px;
-    color: var(--dark-purple);
-}
-.read-more-button{
-    color: white;
-    background:  #ED315D;
-    border-radius: 20px;
-    width: 150px;
-    height: 40px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-    font-weight: 600;
-    /* identical to box height */
-    text-align: center;
-    text-justify: auto;
-    line-height: 40px;
-    text-decoration: none;
+.our-work-panel-img {
+  width: 75%;
+  max-height: 600px;
 }
 
-.top-our-work{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
-    height: 90.75vh;
+.upcoming-projects {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 44px;
+  text-align: center;
+  color: #ed315d;
 }
 
-.title-description{
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 25px;
+#middle-our-work {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
-.title-div{
-    display:flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    flex-basis: 35%;
-    min-width: auto;
+.projects {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
-@media screen and (max-width:768px){
-    .title-div{
-      flex-basis: 70%;
-    }
-  }
-  @media screen and (max-width:846px){
-    .our-work-img{
-        height: 40%;
-    }
-  }
-.upcoming-projects{
-    font-style: normal;
-    font-weight: bold;
-    font-size: 36px;
-    line-height: 44px;
-    text-align: center;
-    color: #ED315D;
+.scroll-button-element {
+  align-self: center;
 }
 
-#middle-our-work{
-    height:100vh;
+#bottom-our-work {
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap-reverse;
+}
+
+.bottom-card {
+  width: 40%;
+}
+
+@media screen and (max-width: 768px) {
+  .projects {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-}
+  }
 
-.projects{
-    display: flex;
-    flex-direction: row;
+  #middle-our-work {
+    height: auto;
+  }
+
+  .bottom-card {
+    width: 75%;
+  }
+
+  #bottom-our-work {
     justify-content: center;
-}
-
-.scroll-button-element{
-    align-self: center;
-}
-
-
-@media screen and (max-width:768px){
-    .projects{
-        display:flex;
-        flex-direction: column;
-    }
-    #middle-our-work{
-        height: auto;
-    }
-  }
-
-#bottom-our-work{
-    height: 100vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
     align-items: center;
-    flex-wrap: wrap-reverse;
-}
-
-.bottom-card{
-    width: 40%;
-}
-
-@media screen and (max-width:768px){
-    .bottom-card{
-        width: 75%;
-    }
-    #bottom-our-work{
-        justify-content: center;
-        align-items: center;
-    }
   }
+}
 
+@media screen and (max-width: 800px) {
+  .our-work-panel-img {
+    width: 60%;
+  }
+}
