--- a/website/src/app/views/home/Home.css
+++ b/website/src/app/views/home/Home.css
@@ -111,12 +111,19 @@
     flex-direction: row;
 }
 
+.social-media-link-container{
+    display: inline;
+}
+
 .social-media-link{
     margin: 25px 50px;
-    color: var(--light-pink);
-    text-decoration: none;
     line-height: 30px;
     display: inline-block;
+}
+
+.social-media-link a{
+    color: var(--light-pink);
+    text-decoration: none;
 }
 
 .middle-column a:hover {
