fix top panel height and footer color

--- a/website/src/app/components/Footer/Footer.css
+++ b/website/src/app/components/Footer/Footer.css
@@ -4,9 +4,8 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: var(--dark-purple);
+    background-color: #481DAB;
     color: white;
-    /* margin-top: 50px; */
     font-family: 'Montserrat', sans-serif;
 }
 
